--- a/releases_v1.json
+++ b/releases_v1.json
@@ -1,5 +1,17 @@
 [
     {
+      "version_code": 3,
+      "version_name": "1.2.0",
+      "release_notes": "• Ярлыки для быстрого запуска плавающего окна или уведомлений при долгом нажатии на иконку приложения;\n• Настройка сортировки в списке точек и в плавающем окне;\n• Исправление обнаруженных багов и ошибок.",
+      "split_apks": {
+        "arm64-v8a": "https://raw.githubusercontent.com/payradar-app/releases/refs/heads/master/1.2.0/payradar-1.2.0-arm64-v8a.apk",
+        "armeabi-v7a": "https://raw.githubusercontent.com/payradar-app/releases/refs/heads/master/1.2.0/payradar-1.2.0-armeabi-v7a.apk",
+        "x86_64": "https://raw.githubusercontent.com/payradar-app/releases/refs/heads/master/1.2.0/payradar-1.2.0-x86_64.apk",
+        "x86": "https://raw.githubusercontent.com/payradar-app/releases/refs/heads/master/1.2.0/payradar-1.2.0-x86.apk"
+      },
+      "universal_apk": "https://raw.githubusercontent.com/payradar-app/releases/refs/heads/master/1.2.0/payradar-1.2.0-universal.apk"
+    },
+    {
         "version_code": 2,
         "version_name": "1.1.0",
         "release_notes": "• Поддержка тарифов «Старт» и «Электро» (доступны в некоторых странах СНГ и Ближнего Востока);\n• Уведомления о повышении цен на точках;\n• Плавающее окно с актуальными ценами, отображающееся поверх других приложений;\n• Таймер, показывающий время с момента последнего обновления цены на точке.",
