--- a/releases_v1.json
+++ b/releases_v1.json
@@ -1,5 +1,17 @@
 [
     {
+        "version_code": 8,
+        "version_name": "1.3.3",
+        "release_notes": "• Исправление обнаруженных багов и ошибок.",
+        "split_apks": {
+          "arm64-v8a": "https://raw.githubusercontent.com/payradar-app/releases/refs/heads/master/1.3.3/payradar-1.3.3-arm64-v8a.apk",
+          "armeabi-v7a": "https://raw.githubusercontent.com/payradar-app/releases/refs/heads/master/1.3.3/payradar-1.3.3-armeabi-v7a.apk",
+          "x86_64": "https://raw.githubusercontent.com/payradar-app/releases/refs/heads/master/1.3.3/payradar-1.3.3-x86_64.apk",
+          "x86": "https://raw.githubusercontent.com/payradar-app/releases/refs/heads/master/1.3.3/payradar-1.3.3-x86.apk"
+        },
+        "universal_apk": "https://raw.githubusercontent.com/payradar-app/releases/refs/heads/master/1.3.3/payradar-1.3.3-universal.apk"
+    },
+    {
         "version_code": 6,
         "version_name": "1.3.1",
         "release_notes": "• Исправление проблемы с загрузкой карты;\n• Исправление обнаруженных багов и ошибок.",
